src/libqevent.bf

public struct QShowEvent
{
	[LinkName("QShowEvent_new")]
	public static extern void* QShowEvent_new();
	[LinkName("QShowEvent_Clone")]
	public static extern QShowEvent QShowEvent_Clone(void* c_this);
}
public struct QHideEvent
{
	[LinkName("QHideEvent_new")]
	public static extern void* QHideEvent_new();
	[LinkName("QHideEvent_Clone")]
	public static extern QHideEvent QHideEvent_Clone(void* c_this);
}
public struct QContextMenuEvent
{
	[LinkName("QContextMenuEvent_new")]
	public static extern void* QContextMenuEvent_new(int64 reason, QPoint pos, QPoint globalPos);
	[LinkName("QContextMenuEvent_new2")]
	public static extern void* QContextMenuEvent_new2(int64 reason, QPoint pos);
	[LinkName("QContextMenuEvent_new3")]
	public static extern void* QContextMenuEvent_new3(int64 reason, QPoint pos, QPoint globalPos, int64 modifiers);
	[LinkName("QContextMenuEvent_Clone")]
	public static extern QContextMenuEvent QContextMenuEvent_Clone(void* c_this);
	[LinkName("QContextMenuEvent_X")]
	public static extern int32 QContextMenuEvent_X(void* c_this);
	[LinkName("QContextMenuEvent_Y")]
	public static extern int32 QContextMenuEvent_Y(void* c_this);
	[LinkName("QContextMenuEvent_GlobalX")]
	public static extern int32 QContextMenuEvent_GlobalX(void* c_this);
	[LinkName("QContextMenuEvent_GlobalY")]
	public static extern int32 QContextMenuEvent_GlobalY(void* c_this);
	[LinkName("QContextMenuEvent_Pos")]
	public static extern QPoint QContextMenuEvent_Pos(void* c_this);
	[LinkName("QContextMenuEvent_GlobalPos")]
	public static extern QPoint QContextMenuEvent_GlobalPos(void* c_this);
	[LinkName("QContextMenuEvent_Reason")]
	public static extern int64 QContextMenuEvent_Reason(void* c_this);
}
public struct QInputMethodEvent
{
	[LinkName("QInputMethodEvent_new")]
	public static extern void* QInputMethodEvent_new();
	[LinkName("QInputMethodEvent_new2")]
	public static extern void* QInputMethodEvent_new2(char8[] preeditText, QInputMethodEvent__Attribute[] attributes);
	[LinkName("QInputMethodEvent_Clone")]
	public static extern QInputMethodEvent QInputMethodEvent_Clone(void* c_this);
	[LinkName("QInputMethodEvent_SetCommitString")]
	public static extern void QInputMethodEvent_SetCommitString(void* c_this, char8[] commitString);
	[LinkName("QInputMethodEvent_Attributes")]
	public static extern QInputMethodEvent__Attribute[] QInputMethodEvent_Attributes(void* c_this);
	[LinkName("QInputMethodEvent_PreeditString")]
	public static extern char8[] QInputMethodEvent_PreeditString(void* c_this);
	[LinkName("QInputMethodEvent_CommitString")]
	public static extern char8[] QInputMethodEvent_CommitString(void* c_this);
	[LinkName("QInputMethodEvent_ReplacementStart")]
	public static extern int32 QInputMethodEvent_ReplacementStart(void* c_this);
	[LinkName("QInputMethodEvent_ReplacementLength")]
	public static extern int32 QInputMethodEvent_ReplacementLength(void* c_this);
	[LinkName("QInputMethodEvent_SetCommitString2")]
	public static extern void QInputMethodEvent_SetCommitString2(void* c_this, char8[] commitString, int32 replaceFrom);
	[LinkName("QInputMethodEvent_SetCommitString3")]
	public static extern void QInputMethodEvent_SetCommitString3(void* c_this, char8[] commitString, int32 replaceFrom, int32 replaceLength);
}
public struct QInputMethodQueryEvent
{
	[LinkName("QInputMethodQueryEvent_new")]
	public static extern void* QInputMethodQueryEvent_new(int64 queries);
	[LinkName("QInputMethodQueryEvent_Clone")]
	public static extern QInputMethodQueryEvent QInputMethodQueryEvent_Clone(void* c_this);
	[LinkName("QInputMethodQueryEvent_Queries")]
	public static extern int64 QInputMethodQueryEvent_Queries(void* c_this);
	[LinkName("QInputMethodQueryEvent_SetValue")]
	public static extern void QInputMethodQueryEvent_SetValue(void* c_this, int64 query, QVariant value);
	[LinkName("QInputMethodQueryEvent_Value")]
	public static extern QVariant QInputMethodQueryEvent_Value(void* c_this, int64 query);
}
public struct QDropEvent
{
	[LinkName("QDropEvent_new")]
	public static extern void* QDropEvent_new(QPointF pos, int64 actions, QMimeData data, int64 buttons, int64 modifiers);
	[LinkName("QDropEvent_new2")]
	public static extern void* QDropEvent_new2(QPointF pos, int64 actions, QMimeData data, int64 buttons, int64 modifiers, int64 typeVal);
	[LinkName("QDropEvent_Clone")]
	public static extern QDropEvent QDropEvent_Clone(void* c_this);
	[LinkName("QDropEvent_Pos")]
	public static extern QPoint QDropEvent_Pos(void* c_this);
	[LinkName("QDropEvent_PosF")]
	public static extern QPointF QDropEvent_PosF(void* c_this);
	[LinkName("QDropEvent_MouseButtons")]
	public static extern int64 QDropEvent_MouseButtons(void* c_this);
	[LinkName("QDropEvent_KeyboardModifiers")]
	public static extern int64 QDropEvent_KeyboardModifiers(void* c_this);
	[LinkName("QDropEvent_Position")]
	public static extern QPointF QDropEvent_Position(void* c_this);
	[LinkName("QDropEvent_Buttons")]
	public static extern int64 QDropEvent_Buttons(void* c_this);
	[LinkName("QDropEvent_Modifiers")]
	public static extern int64 QDropEvent_Modifiers(void* c_this);
	[LinkName("QDropEvent_PossibleActions")]
	public static extern int64 QDropEvent_PossibleActions(void* c_this);
	[LinkName("QDropEvent_ProposedAction")]
	public static extern int64 QDropEvent_ProposedAction(void* c_this);
	[LinkName("QDropEvent_AcceptProposedAction")]
	public static extern void QDropEvent_AcceptProposedAction(void* c_this);
	[LinkName("QDropEvent_DropAction")]
	public static extern int64 QDropEvent_DropAction(void* c_this);
	[LinkName("QDropEvent_SetDropAction")]
	public static extern void QDropEvent_SetDropAction(void* c_this, int64 action);
	[LinkName("QDropEvent_Source")]
	public static extern QObject QDropEvent_Source(void* c_this);
	[LinkName("QDropEvent_MimeData")]
	public static extern QMimeData QDropEvent_MimeData(void* c_this);
}
public struct QDragMoveEvent
{
	[LinkName("QDragMoveEvent_new")]
	public static extern void* QDragMoveEvent_new(QPoint pos, int64 actions, QMimeData data, int64 buttons, int64 modifiers);
	[LinkName("QDragMoveEvent_new2")]
	public static extern void* QDragMoveEvent_new2(QPoint pos, int64 actions, QMimeData data, int64 buttons, int64 modifiers, int64 typeVal);
	[LinkName("QDragMoveEvent_Clone")]
	public static extern QDragMoveEvent QDragMoveEvent_Clone(void* c_this);
	[LinkName("QDragMoveEvent_AnswerRect")]
	public static extern QRect QDragMoveEvent_AnswerRect(void* c_this);
	[LinkName("QDragMoveEvent_Accept")]
	public static extern void QDragMoveEvent_Accept(void* c_this);
	[LinkName("QDragMoveEvent_Ignore")]
	public static extern void QDragMoveEvent_Ignore(void* c_this);
	[LinkName("QDragMoveEvent_AcceptWithQRect")]
	public static extern void QDragMoveEvent_AcceptWithQRect(void* c_this, QRect r);
	[LinkName("QDragMoveEvent_IgnoreWithQRect")]
	public static extern void QDragMoveEvent_IgnoreWithQRect(void* c_this, QRect r);
}
public struct QDragEnterEvent
{
	[LinkName("QDragEnterEvent_new")]
	public static extern void* QDragEnterEvent_new(QPoint pos, int64 actions, QMimeData data, int64 buttons, int64 modifiers);
	[LinkName("QDragEnterEvent_Clone")]
	public static extern QDragEnterEvent QDragEnterEvent_Clone(void* c_this);
}
public struct QDragLeaveEvent
{
	[LinkName("QDragLeaveEvent_new")]
	public static extern void* QDragLeaveEvent_new();
	[LinkName("QDragLeaveEvent_Clone")]
	public static extern QDragLeaveEvent QDragLeaveEvent_Clone(void* c_this);
}
public struct QHelpEvent
{
	[LinkName("QHelpEvent_new")]
	public static extern void* QHelpEvent_new(int64 typeVal, QPoint pos, QPoint globalPos);
	[LinkName("QHelpEvent_Clone")]
	public static extern QHelpEvent QHelpEvent_Clone(void* c_this);
	[LinkName("QHelpEvent_X")]
	public static extern int32 QHelpEvent_X(void* c_this);
	[LinkName("QHelpEvent_Y")]
	public static extern int32 QHelpEvent_Y(void* c_this);
	[LinkName("QHelpEvent_GlobalX")]
	public static extern int32 QHelpEvent_GlobalX(void* c_this);
	[LinkName("QHelpEvent_GlobalY")]
	public static extern int32 QHelpEvent_GlobalY(void* c_this);
	[LinkName("QHelpEvent_Pos")]
	public static extern QPoint QHelpEvent_Pos(void* c_this);
	[LinkName("QHelpEvent_GlobalPos")]
	public static extern QPoint QHelpEvent_GlobalPos(void* c_this);
}
public struct QStatusTipEvent
{
	[LinkName("QStatusTipEvent_new")]
	public static extern void* QStatusTipEvent_new(char8[] tip);
	[LinkName("QStatusTipEvent_Clone")]
	public static extern QStatusTipEvent QStatusTipEvent_Clone(void* c_this);
	[LinkName("QStatusTipEvent_Tip")]
	public static extern char8[] QStatusTipEvent_Tip(void* c_this);
}
public struct QWhatsThisClickedEvent
{
	[LinkName("QWhatsThisClickedEvent_new")]
	public static extern void* QWhatsThisClickedEvent_new(char8[] href);
	[LinkName("QWhatsThisClickedEvent_Clone")]
	public static extern QWhatsThisClickedEvent QWhatsThisClickedEvent_Clone(void* c_this);
	[LinkName("QWhatsThisClickedEvent_Href")]
	public static extern char8[] QWhatsThisClickedEvent_Href(void* c_this);
}
public struct QActionEvent
{
	[LinkName("QActionEvent_new")]
	public static extern void* QActionEvent_new(int32 typeVal, QAction action);
	[LinkName("QActionEvent_new2")]
	public static extern void* QActionEvent_new2(int32 typeVal, QAction action, QAction before);
	[LinkName("QActionEvent_Clone")]
	public static extern QActionEvent QActionEvent_Clone(void* c_this);
	[LinkName("QActionEvent_Action")]
	public static extern QAction QActionEvent_Action(void* c_this);
	[LinkName("QActionEvent_Before")]
	public static extern QAction QActionEvent_Before(void* c_this);
}
public struct QFileOpenEvent
{
	[LinkName("QFileOpenEvent_new")]
	public static extern void* QFileOpenEvent_new(char8[] file);
	[LinkName("QFileOpenEvent_new2")]
	public static extern void* QFileOpenEvent_new2(QUrl url);
	[LinkName("QFileOpenEvent_Clone")]
	public static extern QFileOpenEvent QFileOpenEvent_Clone(void* c_this);
	[LinkName("QFileOpenEvent_File")]
	public static extern char8[] QFileOpenEvent_File(void* c_this);
	[LinkName("QFileOpenEvent_Url")]
	public static extern QUrl QFileOpenEvent_Url(void* c_this);
	[LinkName("QFileOpenEvent_OpenFile")]
	public static extern bool QFileOpenEvent_OpenFile(void* c_this, QFile file, int64 flags);
}
public struct QToolBarChangeEvent
{
	[LinkName("QToolBarChangeEvent_new")]
	public static extern void* QToolBarChangeEvent_new(bool t);
	[LinkName("QToolBarChangeEvent_Clone")]
	public static extern QToolBarChangeEvent QToolBarChangeEvent_Clone(void* c_this);
	[LinkName("QToolBarChangeEvent_Toggle")]
	public static extern bool QToolBarChangeEvent_Toggle(void* c_this);
}
public struct QShortcutEvent
{
	[LinkName("QShortcutEvent_new")]
	public static extern void* QShortcutEvent_new(QKeySequence key, int32 id);
	[LinkName("QShortcutEvent_new2")]
	public static extern void* QShortcutEvent_new2(QKeySequence key, int32 id, bool ambiguous);
	[LinkName("QShortcutEvent_Clone")]
	public static extern QShortcutEvent QShortcutEvent_Clone(void* c_this);
	[LinkName("QShortcutEvent_Key")]
	public static extern QKeySequence QShortcutEvent_Key(void* c_this);
	[LinkName("QShortcutEvent_ShortcutId")]
	public static extern int32 QShortcutEvent_ShortcutId(void* c_this);
	[LinkName("QShortcutEvent_IsAmbiguous")]
	public static extern bool QShortcutEvent_IsAmbiguous(void* c_this);
}
public struct QWindowStateChangeEvent
{
	[LinkName("QWindowStateChangeEvent_new")]
	public static extern void* QWindowStateChangeEvent_new(int64 oldState);
	[LinkName("QWindowStateChangeEvent_new2")]
	public static extern void* QWindowStateChangeEvent_new2(int64 oldState, bool isOverride);
	[LinkName("QWindowStateChangeEvent_Clone")]
	public static extern QWindowStateChangeEvent QWindowStateChangeEvent_Clone(void* c_this);
	[LinkName("QWindowStateChangeEvent_OldState")]
	public static extern int64 QWindowStateChangeEvent_OldState(void* c_this);
	[LinkName("QWindowStateChangeEvent_IsOverride")]
	public static extern bool QWindowStateChangeEvent_IsOverride(void* c_this);
}
